# autograd-cpp

./: CMakeLists.txt  README.md  autograd.cpp
dependencies/: CMakeLists.txt
dependencies/googletest-1.13.0/googlemock/: CMakeLists.txt
dependencies/googletest-1.13.0/googlemock/scripts/generator/: gmock_gen.py
dependencies/googletest-1.13.0/googletest/: CMakeLists.txt
dependencies/googletest-1.13.0/googletest/cmake/: Config.cmake.in  internal_utils.cmake
examples/: CMakeLists.txt  gradients.cpp
include/autograd/: scalar.hpp
python_bindings/: CMakeLists.txt  bindings.cpp  main.py
src/autograd/: scalar.hpp
tests/: CMakeLists.txt  scalar_test.cpp
